diesel_compile_tests/tests/fail/select_carries_correct_result_type_info.stderr
error[E0277]: the trait bound `i32: FromSql<diesel::sql_types::Text, _>` is not satisfied
    --> tests/fail/select_carries_correct_result_type_info.rs:19:27
     |
19   |     let ids = select_name.load::<i32>(&mut connection);
     |                           ^^^^ the trait `FromSql<diesel::sql_types::Text, _>` is not implemented for `i32`
     |
     = help: the following other types implement trait `FromSql<A, DB>`:
               <f32 as FromSql<diesel::sql_types::Float, Mysql>>
               <f32 as FromSql<diesel::sql_types::Float, Pg>>
               <f32 as FromSql<diesel::sql_types::Float, Sqlite>>
               <f64 as FromSql<diesel::sql_types::Double, Mysql>>
               <f64 as FromSql<diesel::sql_types::Double, Pg>>
               <f64 as FromSql<diesel::sql_types::Double, Sqlite>>
               <i16 as FromSql<diesel::sql_types::SmallInt, Mysql>>
               <i16 as FromSql<diesel::sql_types::SmallInt, Pg>>
             and 13 others
     = note: required because of the requirements on the impl of `Queryable<diesel::sql_types::Text, _>` for `i32`
     = note: required because of the requirements on the impl of `FromSqlRow<diesel::sql_types::Text, _>` for `i32`
     = note: required because of the requirements on the impl of `load_dsl::private::CompatibleType<i32, _>` for `diesel::sql_types::Text`
     = note: required because of the requirements on the impl of `LoadQuery<'_, _, i32>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<columns::name>>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::load`

error[E0277]: the trait bound `*const str: FromSql<diesel::sql_types::Integer, _>` is not satisfied
    --> tests/fail/select_carries_correct_result_type_info.rs:20:27
     |
20   |     let names = select_id.load::<String>(&mut connection);
     |                           ^^^^ the trait `FromSql<diesel::sql_types::Integer, _>` is not implemented for `*const str`
     |
     = help: the following other types implement trait `FromSql<A, DB>`:
               <*const str as FromSql<diesel::sql_types::Text, Mysql>>
               <*const str as FromSql<diesel::sql_types::Text, Pg>>
               <*const str as FromSql<diesel::sql_types::Text, Sqlite>>
               <std::string::String as FromSql<ST, DB>>
               <std::string::String as FromSql<TimestamptzSqlite, Sqlite>>
               <std::string::String as FromSql<diesel::sql_types::Date, Sqlite>>
               <std::string::String as FromSql<diesel::sql_types::Time, Sqlite>>
               <std::string::String as FromSql<diesel::sql_types::Timestamp, Sqlite>>
     = note: required because of the requirements on the impl of `FromSql<diesel::sql_types::Integer, _>` for `std::string::String`
     = note: required because of the requirements on the impl of `Queryable<diesel::sql_types::Integer, _>` for `std::string::String`
     = note: required because of the requirements on the impl of `FromSqlRow<diesel::sql_types::Integer, _>` for `std::string::String`
     = note: required because of the requirements on the impl of `load_dsl::private::CompatibleType<std::string::String, _>` for `diesel::sql_types::Integer`
     = note: required because of the requirements on the impl of `LoadQuery<'_, _, std::string::String>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<columns::id>>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::load`
